freest/test/prog/Valid/Functional/Average/Average.fst
module Average where 

avg : Int
avg = div (1 + 2 + 3 + 4 + 5) 5

main : ()
main = print (avg)
