freest/test/prog/Invalid/Typing/ExposeFunction/ExposeFunction.fst
module ExposeFunction where

foo : Int
foo = 1 1